[package]
name = "vproxy"
version = "2.0.50"
edition = "2021"
authors = ["gngppz@gmail.com"]
description = "A high-performance HTTP/HTTPS/SOCKS5 proxy server"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/0x676e67/vproxy"
rust-version = "1.81"

[dependencies]
base64 = "0.22.0"
cidr = "0.3.0"
thiserror = "2"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
rand = "0.8.5"
clap = { version = "4", features = ["derive", "env"] }
self_update = { version = "0.42.0", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
fxhash = "0.2.1"
num_cpus = "1.0"

# for log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# for http
http = "1"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1"

# rustls
rustls-pki-types = { version = "1.10.0" }
rustls-pemfile = { version = "2.2.0" }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12"] }
rcgen = "0.13.0"

# for socks5
bytes = "1"
pin-project-lite = "0.2"
tokio-stream = "0.1.0"
percent-encoding = "2.3.1"

# for memory allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.6.0"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3.30"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["user", "signal"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
